# shumi

./: .gitignore  README.md  actual.txt  app.py  dependencies.yaml  main.py  pyproject.toml  req.txt  requirements.txt  名称未設定ファイル.drawio
.github/workflows/: ci.yml  lint.yml  pkg.yml
Jam App Project/: Jam App Project.sln
Jam App Project/Jam App Project/: App.xaml  App.xaml.cs  Jam App Project.csproj  MainWindow.xaml  MainWindow.xaml.cs
app/: __init__.py  app.py
app/rust_ext/: Cargo.toml
controllers/: app_controller.py  controllers.py  home_controller.py  navigation_controller.py  settings_controller.py
experiments/: index.html  jstest.py  temp.txt
helpers/: connections.py  errors.py  helpers.py  logger.py  signals.py
managers/: auth_manager.py  context_manager.py  session_manager.py  sync_manager.py
models/: application_model.py  data_model.py  home_model.py  models.py  preferences_model.py  settings_model.py
qtdesigner/: create_account_design.ui  home_design.ui  login_design.ui  profile_design.ui  session_design.ui  settings_design.ui  stats_design.ui
resources/: dark_mode.qss  light_mode.qss  sales_data.xlsx
routers/: navigation_router.py
services/: duckdb_service.py  supabase_service.py
tests/: test_auth.py  test_compile.py
ui/: buttons.py  heatmap.py  labels.py  streak.py
user/: 2025-05-01 at 05-27.txt  2025-05-01 at 05-29.txt  2025-05-02 at 02-33.txt  2025-05-10 at 16-41.npy
utils/: timer.py
views/: create_view.py  home_view.py  login_view.py  profile_view.py  session_view.py  settings_view.py  stats_view.py  summary_view.py  view.py
(+83 files in other folders)
