[project]
name = "shumi"
version = "1.0.0"
description = "A growth & productivity app for tracking your practice sessions, visualizing progress, and building streaks."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "duckdb>=1.4.4",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "ibis-framework[duckdb]>=12.0.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.10.2",
    "pyqt6-webengine>=6.10.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "supabase>=2.28.0",
]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".dev", "venv", ".venv", "env", ".env", ".eggs", "*.egg", "build", "dist"]
extend-exclude = [".dev", "site-packages"]

